--- a/BMEG_310_Final_Project_P2.Rmd
+++ b/BMEG_310_Final_Project_P2.Rmd
@@ -277,7 +277,39 @@ pheatmap(
   clustering_method = "ward.D2"
 )
 ```
+#Cutting Dendogram
+```{r}
+# Define Patient Clusters from Dendrogram
+# Cut the dendogram to assign patients to distinct clusters
 
+# Silhouette Method (Quality of clustering)
+# Higher silhouette = better separation between clusters
+p2 <- fviz_nbclust(t(expr_z_top), FUN = hcut, method = "silhouette", k.max = 10) +
+  ggtitle("Silhouette Method: Optimal Number of Clusters") +
+  geom_vline(xintercept = 6, linetype = "dashed", color = "red")
+print(p2)
+```
+```{r}
+# Cut the Dendrogram into k=6 Clusters
+
+# Cut dendrogram at k=6
+k <- 6
+patient_clusters <- cutree(hc, k = k)
+
+# Create a dataframe with cluster assignments
+cluster_df <- data.frame(
+  PATIENT_ID = names(patient_clusters),
+  Cluster = patient_clusters,
+  Cluster_Label = paste0("C", patient_clusters),
+  stringsAsFactors = FALSE
+)
+
+# Summary of cluster sizes
+cat("Cluster sizes:\n")
+print(table(cluster_df$Cluster_Label))
+cat("\n")
+
+```
 
 # ============================================================================
 # INVESTIGATION 2: High-Variance Gene Clustering
@@ -478,9 +510,111 @@ pheatmap(
 # TODO: State whether molecular clusters add prognostic value beyond clinical factors
 
 # ============================================================================
-# INVESTIGATION 6: Clinical Variable Associations
-# RQ 2.6: Do clusters differ in clinical characteristics?
+# INVESTIGATION 6: Variability by Clinical Factors
+# RQ 2.6: Which genes exhibit the greatest variability in expression by age?
 # ============================================================================
+
+# Step 1: Calculate variance for each gene
+```{r}
+gene_vars <- apply(vst_counts, 1, var)
+
+cat("Total number of genes:", length(gene_vars), "\n")
+cat("Variance range:", range(gene_vars), "\n\n")
+```
+
+# Step 2: Examine variance distribution
+# To understand what a reasonable cutoff is
+```{r}
+summary(gene_vars)
+
+# Genes with variance > 0.5
+sum(gene_vars > 0.5)
+# Genes with variance > 0.3
+sum(gene_vars > 0.3)
+```
+
+# Reduce computational burden while retaining biologically relevant genes
+# Select top 10,000 genes by variance across all samples
+### Computationally feasible, tests enough genes to capture age-related variability (5000 was deemed too restrictive), removes very low-variance genes (likely noise)
+# Step 3: Select top 10000 most variable genes
+```{r}
+top_genes_10k <- names(sort(gene_vars, decreasing = TRUE))[1:10000]
+
+# Create subset matrices for downstream analysis
+expr_vst_top10k <- vst_counts[top_genes_10k, ]
+expr_z_top10k <- z_vst[top_genes_10k, ]
+
+cat("Filtered VST matrix dimensions:", dim(expr_vst_top10k), "\n")
+cat("Filtered Z-scored VST matrix dimensions:", dim(expr_z_top10k), "\n\n")
+```
+# Step 4: Matching expression data with age data
+```{r}
+# Extract age data from clinical information
+age_data <- data_clinical_patient[, c("PATIENT_ID", "AGE")]
+age_data <- age_data[!is.na(age_data$AGE), ]
+
+cat("Total patients with age data:", nrow(age_data), "\n")
+cat("Age range:", range(age_data$AGE), "\n")
+cat("Age distribution:\n")
+print(summary(age_data$AGE))
+
+# Create age groups for visualization and categorical analysis
+age_data$age_group <- cut(age_data$AGE, 
+                          breaks = c(0, 50, 60, 70, 100),
+                          labels = c("0-49", "50-59", "60-69", "70+"),
+                          include.lowest = TRUE)
+
+cat("\nAge group distribution:\n")
+print(table(age_data$age_group))
+
+# Match samples between expression and clinical data
+common_patients <- intersect(colnames(expr_vst_top10k), age_data$PATIENT_ID)
+cat("\nPatients in both datasets:", length(common_patients), "\n")
+
+# Filter and align both datasets
+expr_matched <- expr_vst_top10k[, common_patients]
+age_matched <- age_data[age_data$PATIENT_ID %in% common_patients, ]
+age_matched <- age_matched[match(colnames(expr_matched), age_matched$PATIENT_ID), ]
+
+# Verify alignment
+stopifnot(all(colnames(expr_matched) == age_matched$PATIENT_ID))
+cat("Data alignment verified!\n\n")
+```
+
+#Restart
+# STEP 1: Merge Cluster Assignments with Age Data
+```{r}
+# Extract age data from clinical information
+age_data <- data_clinical_patient[, c("PATIENT_ID", "AGE")]
+age_data <- age_data[!is.na(age_data$AGE), ]
+
+# Merge with cluster assignments
+age_cluster_data <- merge(cluster_df, age_data, by = "PATIENT_ID")
+
+cat("Total patients with both cluster and age data:", nrow(age_cluster_data), "\n")
+cat("Age range:", range(age_cluster_data$AGE), "\n\n")
+
+# Add age groups
+age_cluster_data$age_group <- cut(age_cluster_data$AGE, 
+                                   breaks = c(0, 40, 60, 80, 100),
+                                   labels = c("Young", "Middle", "Senior", "Elderly"),
+                                   include.lowest = TRUE)
+
+# Summary statistics by cluster
+cat("=== Age Distribution by Cluster ===\n")
+age_summary <- aggregate(AGE ~ Cluster_Label, data = age_cluster_data, 
+                         FUN = function(x) c(Mean = mean(x), 
+                                             SD = sd(x), 
+                                             Median = median(x),
+                                             Min = min(x),
+                                             Max = max(x)))
+print(age_summary)
+cat("\n")
+
+```
+
+
+
 
 ## GOAL: Characterize clinical profiles of molecular clusters
 
