--- a/BMEG_310_Final_Project_P2.Rmd
+++ b/BMEG_310_Final_Project_P2.Rmd
@@ -19,7 +19,7 @@ output:
 
 # Load required libraries
 ```{r, results='hide'}
-install.packages("factoextra")
+#install.packages("factoextra")
 library(factoextra)
 library(DESeq2)
 library(pheatmap)
@@ -34,7 +34,7 @@ library(tibble)
 ```
 
 
-set.seed(123)
+set.seed(1)
 
 # ============================================================================
 # STEP 1: DATA LOADING AND INITIAL SETUP
@@ -185,7 +185,7 @@ log_norm_counts <- log2(normalized_counts + 1)
 cat("Log transform count matrix dimensions:", dim(log_norm_counts), "\n")
 cat("Log transformation range:", range(log_norm_counts), "\n\n")
 
-# Apply VST (recommended for >30 samples) - Applies variance-stabilizinvg transformation, 'blind' Ignores experimental design
+# Apply VST (recommended for >30 samples) - Applies variance-stabilizing transformation, 'blind' Ignores experimental design
 vsd <- vst(dds, blind = TRUE)
 vst_counts <- assay(vsd)
 
@@ -795,45 +795,26 @@ age_cluster_data$age_group <- cut(age_cluster_data$AGE,
 # END OF TEMPLATE
 # ============================================================================
 
+
+#Investigation 8
+
 ```{r}
-
-# Investigation 8: Top 500 Variable Genes by Tumor Stage
-
-# RQ 2.8: Which genes exhibit the greatest variability in expression by tumor stage?
-# H8: Higher tumor stage correlates with oncogene expression
-
 library(ggplot2)
 library(pheatmap)
 library(biomaRt)   
-library(dplyr)    
+library(dplyr)
+```
 
-cat("Investigation 8: Variable Genes by Stage\n")
+```{r}
+#Clean Ensembl IDs and map to gene symbols
 
-#Fix gene data ID's to correct format
+# Remove version numbers from Ensembl IDs
+clean_ids <- sub("\\..*", "", rownames(log_norm_counts))
+rownames(log_norm_counts) <- clean_ids
+rownames(z_log) <- clean_ids
 
-# Problem: Ensembl IDs have version numbers (e.g., ENSG00000000003.15)
-# Solution: Remove version numbers and map to readable gene symbols (HGNC)
-
-cat("Fixing Ensembl gene IDs and mapping to gene symbols...\n")
-
-# Use log_norm_counts from the preprocessing script
-# This is log2(normalized_counts + 1)
-log2_counts <- log_norm_counts
-
-# Also prepare z-scores for visualization later
-z_scores <- z_log
-
-# Remove version numbers from Ensembl IDs (everything after the dot)
-clean_ids <- sub("\\..*", "", rownames(log2_counts))
-
-# Update rownames with clean IDs
-rownames(log2_counts) <- clean_ids
-rownames(z_scores) <- clean_ids
-
-# Connect to Ensembl BioMart to get gene symbol mappings
+# Get gene symbols from Ensembl
 mart <- useMart("ensembl", dataset = "hsapiens_gene_ensembl")
-
-# Query BioMart: get gene symbols for our Ensembl IDs
 mapping <- getBM(
   attributes = c("ensembl_gene_id", "hgnc_symbol"),
   filters = "ensembl_gene_id",
@@ -841,142 +822,110 @@ mapping <- getBM(
   mart = mart
 )
 
-# Convert matrix to dataframe for joining
-expr_df <- as.data.frame(log2_counts)
-expr_df$ensembl_gene_id <- rownames(expr_df)
-
-# Join expression data with gene symbol mapping
-expr_merged <- expr_df %>%
-  left_join(mapping, by = "ensembl_gene_id")
-
-# Drop genes without symbols (unannotated genes)
-expr_merged <- expr_merged %>% filter(hgnc_symbol != "")
-
-# Remove duplicates (some Ensembl IDs map to same symbol)
-expr_merged <- expr_merged %>% distinct(hgnc_symbol, .keep_all = TRUE)
-
-# Set gene symbols as rownames for easy access
-rownames(expr_merged) <- expr_merged$hgnc_symbol
-
-# Remove helper columns
-expr_merged$ensembl_gene_id <- NULL
-expr_merged$hgnc_symbol <- NULL
-
-# Convert back to matrix
-expr_symbol <- as.matrix(expr_merged)
-
-# Do the same for z-scores
-z_df <- as.data.frame(z_scores)
-z_df$ensembl_gene_id <- rownames(z_df)
-
-z_merged <- z_df %>%
+# Convert to gene symbols
+expr_df <- as.data.frame(log_norm_counts) %>%
+  mutate(ensembl_gene_id = rownames(log_norm_counts)) %>%
   left_join(mapping, by = "ensembl_gene_id") %>%
   filter(hgnc_symbol != "") %>%
   distinct(hgnc_symbol, .keep_all = TRUE)
 
-rownames(z_merged) <- z_merged$hgnc_symbol
-z_merged$ensembl_gene_id <- NULL
-z_merged$hgnc_symbol <- NULL
+rownames(expr_df) <- expr_df$hgnc_symbol
+expr_symbol <- as.matrix(expr_df[, -c(ncol(expr_df)-1, ncol(expr_df))])
 
-z_scores <- as.matrix(z_merged)
+# Same for z-scores
+z_df <- as.data.frame(z_log) %>%
+  mutate(ensembl_gene_id = rownames(z_log)) %>%
+  left_join(mapping, by = "ensembl_gene_id") %>%
+  filter(hgnc_symbol != "") %>%
+  distinct(hgnc_symbol, .keep_all = TRUE)
 
-cat("Gene ID conversion complete.\n")
-cat("Number of genes after symbol mapping:", nrow(expr_symbol), "\n")
+rownames(z_df) <- z_df$hgnc_symbol
+z_scores_symbol <- as.matrix(z_df[, -c(ncol(z_df)-1, ncol(z_df))])
+
+cat("Genes with symbols:", nrow(expr_symbol), "\n\n")
+
+```
 
 
-# Step 1: Match RNA Seq data to clinical stage data
+```{r}
+# Subset to Samples(Patients) with Stage Info
 
-# Problem: RNA-seq sample IDs don't exactly match clinical patient IDs
-# Solution: Extract patient ID (first 12 characters) and join with clinical data
-
-cat("Matching samples to clinical stage\n")
-
-# Extract patient ID from RNA-seq sample names
-# Example: TCGA.AB.2842.03A.01R → TCGA-AB-2842
+# Extract patient IDs and match to clinical data
 rnaseq_patient_ids <- substr(gsub("\\.", "-", colnames(expr_symbol)), 1, 12)
 
-# Create lookup table
 stage_info <- data.frame(
   sample_id = colnames(expr_symbol),
-  patient_id = rnaseq_patient_ids,
-  stringsAsFactors = FALSE
-)
-
-# Join with clinical data to get stage information
-stage_info <- stage_info %>%
+  patient_id = rnaseq_patient_ids
+) %>%
   left_join(
     data_clinical_patient %>% 
       dplyr::select(PATIENT_ID, AJCC_PATHOLOGIC_TUMOR_STAGE) %>%
       rename(patient_id = PATIENT_ID, stage = AJCC_PATHOLOGIC_TUMOR_STAGE),
     by = "patient_id"
   ) %>%
-  filter(!is.na(stage) & stage != "")  # Keep only samples with stage data
+  filter(!is.na(stage) & stage != "")
 
-cat("Samples with stage info:", nrow(stage_info), "\n")
-print(table(stage_info$stage))
-
-# Subset expression matrix to only samples with stage data
+# Subset expression matrices
 expr_staged <- expr_symbol[, stage_info$sample_id]
+z_scores_staged <- z_scores_symbol[, stage_info$sample_id]
 
+cat("Samples with stage:", nrow(stage_info), "\n")
+print(table(stage_info$stage))
+cat("\n")
+```
 
-# Step 2: Variance and top 500 genes
+```{r}
+#Select top 500 Most Variable genes
 
-# Goal: Find genes with highest variability across samples
-# Why: Variable genes are more likely to be biologically meaningful
-
-cat("\nSelecting top 500 most variable genes\n")
-
-# Calculate variance for each gene across all samples
+# Calculate variance for each gene
 gene_variance <- apply(expr_staged, 1, var)
 
-# Select top 500 genes with highest variance
+# Select top 500
 top500_genes <- names(sort(gene_variance, decreasing = TRUE)[1:500])
 
 cat("Top 500 genes selected\n")
-cat("Variance range:", range(gene_variance[top500_genes]), "\n\n")
+cat("Variance range:", round(range(gene_variance[top500_genes]), 2), "\n\n")
 
+#This shows how expressed each gene is, and take the top 500 genes that have the largest variance in expression. 
+#Each patient expresses a certain amount of each gene,
+#so the highest variance is intersting as something might be happening, Could be indicative. 
+```
 
-# Step 3: Anova test
+```{r}
+#ANOVA Test by stage
 
-# Question: Do any of these 500 genes differ significantly by stage?
-# Method: One-way ANOVA (tests if means differ across stage groups)
-
-cat("Testing gene expression vs stage (ANOVA)\n")
-
+# Test if genes differ across stages
 anova_results <- data.frame(
   gene = top500_genes,
   p_value = sapply(top500_genes, function(g) {
-    # ANOVA: does expression of gene g differ by stage?
     fit <- aov(expr_staged[g, ] ~ factor(stage_info$stage))
-    summary(fit)[[1]]["Pr(>F)"][1, 1]  # Extract p-value
-  }),
-  stringsAsFactors = FALSE
+    summary(fit)[[1]]["Pr(>F)"][1, 1]
+  })
 )
+```
 
-# Adjust p-values for multiple testing (Benjamini-Hochberg FDR)
+```{r}
+#Multiple testing correction
+
 anova_results$p_adj <- p.adjust(anova_results$p_value, method = "BH")
 anova_results$significant <- anova_results$p_adj < 0.05
 
-cat("Significant genes (FDR < 0.05):", sum(anova_results$significant), "\n\n")
-
-cat("Top 10 genes:\n")
+cat("Significant genes (FDR < 0.05):", sum(anova_results$significant), "\n")
 print(anova_results %>% arrange(p_adj) %>% head(10))
+cat("\n")
+```
 
+```{r}
+#Heatmap Vizualization
+#Out of the 500 most variable, only 85 are significant -> therefore, should only see small clustering....
 
-# Step 4: Visualizations
-# Create heatmap and boxplots to visualize patterns
+top500_matrix <- z_scores_staged[top500_genes, stage_info$sample_id]
 
-# Get z-scored expression for top 500 genes
-# Using z_scores here for visualization (standardized scale)
-top500_matrix <- z_scores[top500_genes, stage_info$sample_id]
-
-# Annotation for heatmap columns
 annotation <- data.frame(
   Stage = factor(stage_info$stage),
   row.names = stage_info$sample_id
 )
 
-# Heatmap: shows all 500 genes clustered by expression pattern
 pheatmap(
   top500_matrix,
   annotation_col = annotation,
@@ -984,175 +933,88 @@ pheatmap(
   show_colnames = FALSE,
   main = "Top 500 Variable Genes by Stage"
 )
+```
 
-# Boxplots: show top 3 most significant genes in detail
-top3_genes <- head(anova_results %>% arrange(p_adj), 3)$gene
+```{r}
+#Identify the oncogenes
 
-for (gene in top3_genes) {
-  plot_data <- data.frame(
-    expression = expr_staged[gene, ],  # Using log2_counts here for actual values
-    stage = factor(stage_info$stage)
-  )
-  
-  print(
-    ggplot(plot_data, aes(stage, expression, fill = stage)) +
-      geom_boxplot() +
-      labs(title = paste("Gene:", gene), x = "Stage", y = "Log2 Expression") +
-      theme_bw()
-  )
-}
-
-
-# Step 5: Test oncogene hypothesis (H8)
-# H8: Higher tumor stage correlates with oncogene expression
-# Method: Check if known oncogenes are variable and correlate with stage
-
-cat("\nTesting oncogene hypothesis\n")
-
-# List of known oncogenes
 oncogenes <- c("MYC","KRAS","NRAS","HRAS","EGFR","ERBB2","PIK3CA",
                "BRAF","AKT1","AKT2","MDM2","CCND1","CDK4","CDK6",
                "MET","RET","ALK","ROS1","FGFR1","FGFR2")
 
-# Check which oncogenes are present in our dataset
-all_genes <- rownames(expr_staged)
-oncogenes_in_data <- intersect(all_genes, oncogenes)
+oncogenes_in_data <- intersect(rownames(expr_staged), oncogenes)
 
-cat("\nOncogenes present in dataset:", length(oncogenes_in_data), "\n")
-print(oncogenes_in_data)
+cat("Oncogenes found:", length(oncogenes_in_data), "\n")
+cat(paste(oncogenes_in_data, collapse = ", "), "\n\n")
+```
 
-# Check which oncogenes are in the top 500 most variable genes
-oncogenes_in_top500 <- intersect(top500_genes, oncogenes)
-cat("\nOncogenes in top 500 variable genes:", length(oncogenes_in_top500), "\n")
-print(oncogenes_in_top500)
+```{r}
+#Oncogene stage correlation
+#Spearman correlation is a monotonic relationship between 2 variables
+#In this case, we are looking at does expression go up or down with stage
 
-
-# Test all oncogenes present in data (not just top 500) 
-# This could be more exciting and give us different values
 if (length(oncogenes_in_data) > 0) {
-  cat("\nTesting ALL oncogenes for stage correlation\n")
   
-  oncogene_results_all <- data.frame(
+  # Convert stage to numeric (I=1, II=2, III=3, IV=4)
+  stage_numeric <- as.numeric(factor(
+    stage_info$stage, 
+    levels = c("STAGE I", "STAGE II", "STAGE III", "STAGE IV")
+  ))
+  
+  # Test correlation for each oncogene
+  oncogene_results <- data.frame(
     gene = oncogenes_in_data,
-    correlation = NA,
-    p_value = NA,
-    direction = NA,
-    in_top500 = oncogenes_in_data %in% top500_genes
+    correlation = sapply(oncogenes_in_data, function(g) {
+      cor.test(stage_numeric, expr_staged[g, ], method = "spearman")$estimate
+    }),
+    p_value = sapply(oncogenes_in_data, function(g) {
+      cor.test(stage_numeric, expr_staged[g, ], method = "spearman")$p.value
+    })
   )
   
-  for (i in seq_along(oncogenes_in_data)) {
-    gene <- oncogenes_in_data[i]
-    
-    # Convert stage to numeric for correlation
-    # Stage I=1, Stage II=2, Stage III=3, Stage IV=4
-    stage_numeric <- as.numeric(factor(stage_info$stage, 
-                                       levels = c("STAGE I", "STAGE II", 
-                                                  "STAGE III", "STAGE IV")))
-    
-    # Spearman correlation: does expression correlate with stage number?
-    cor_test <- cor.test(stage_numeric, 
-                         expr_staged[gene, ],
-                         method = "spearman")
-    
-    oncogene_results_all$correlation[i] <- cor_test$estimate
-    oncogene_results_all$p_value[i] <- cor_test$p.value
-    oncogene_results_all$direction[i] <- ifelse(cor_test$estimate > 0, "UP", "DOWN")
-  }
+  oncogene_results$p_adj <- p.adjust(oncogene_results$p_value, method = "BH")
+  oncogene_results$significant <- oncogene_results$p_adj < 0.05
+  oncogene_results$direction <- ifelse(oncogene_results$correlation > 0, "UP", "DOWN")
   
-  oncogene_results_all$p_adj <- p.adjust(oncogene_results_all$p_value, method = "BH")
-  oncogene_results_all$significant <- oncogene_results_all$p_adj < 0.05
-  
-  cat("\nOncogene correlation results:\n")
-  print(oncogene_results_all %>% arrange(p_adj))
-  
-  # Create boxplots for significant oncogenes
-  sig_oncogenes <- oncogene_results_all %>% 
+  cat("Oncogene correlation results:\n")
+  print(oncogene_results %>% arrange(p_adj))
+  cat("\n")
+}
+```
+```{r}
+#Plot significant outcomes
+
+if (exists("oncogene_results")) {
+  sig_oncogenes <- oncogene_results %>% 
     filter(significant) %>% 
     pull(gene)
   
   if (length(sig_oncogenes) > 0) {
-    cat("\nCreating boxplots for significant oncogenes...\n")
-    
     for (gene in sig_oncogenes) {
+      corr <- oncogene_results$correlation[oncogene_results$gene == gene]
+      p_adj <- oncogene_results$p_adj[oncogene_results$gene == gene]
+      
       plot_data <- data.frame(
         expression = expr_staged[gene, ],
         stage = factor(stage_info$stage)
       )
       
-      print(
-        ggplot(plot_data, aes(stage, expression, fill = stage)) +
-          geom_boxplot() +
-          labs(title = paste("Oncogene:", gene), 
-               x = "Stage", 
-               y = "Log2 Expression") +
-          theme_bw()
-      )
+      p <- ggplot(plot_data, aes(stage, expression, fill = stage)) +
+        geom_boxplot() +
+        labs(
+          title = paste(gene, "| ρ =", round(corr, 3), 
+                       "| p_adj =", format(p_adj, scientific = TRUE, digits = 2)),
+          x = "Tumor Stage", 
+          y = "Log2 Expression"
+        ) +
+        theme_bw() +
+        theme(legend.position = "none")
+      
+      print(p)
     }
+  } else {
+    cat("No significant oncogenes to plot\n")
   }
-  
-} else {
-  cat("\nNo oncogenes found in dataset.\n")
-}
-
-# Original test (only for oncogenes in top 500)
-if (length(oncogenes_in_top500) > 0) {
-  cat("\nOncogenes in top 500 variable genes\n")
-  
-  oncogene_results <- data.frame(
-    gene = oncogenes_in_top500,
-    correlation = NA,
-    p_value = NA,
-    direction = NA
-  )
-  
-  for (i in seq_along(oncogenes_in_top500)) {
-    gene <- oncogenes_in_top500[i]
-    
-    stage_numeric <- as.numeric(factor(stage_info$stage, 
-                                       levels = c("STAGE I", "STAGE II", 
-                                                  "STAGE III", "STAGE IV")))
-    
-    cor_test <- cor.test(stage_numeric, 
-                         expr_staged[gene, ],
-                         method = "spearman")
-    
-    oncogene_results$correlation[i] <- cor_test$estimate
-    oncogene_results$p_value[i] <- cor_test$p.value
-    oncogene_results$direction[i] <- ifelse(cor_test$estimate > 0, "UP", "DOWN")
-  }
-  
-  oncogene_results$p_adj <- p.adjust(oncogene_results$p_value, method = "BH")
-  oncogene_results$significant <- oncogene_results$p_adj < 0.05
-  
-  print(oncogene_results)
-  
-} else {
-  cat("\nNo oncogenes found among top 500 variable genes.\n")
-  cat("This is not necessarily wrong - see analysis of ALL oncogenes above.\n")
-}
-
-
-# Conclusion
-cat("\nConclusion for RQ 2.8 & H8\n")
-
-cat("1. Top 500 most variable genes identified.\n")
-cat("2. ", sum(anova_results$significant), "genes significantly associated with stage.\n")
-cat("3. Oncogenes in dataset:", length(oncogenes_in_data), "\n")
-cat("4. Oncogenes in top 500 variable:", length(oncogenes_in_top500), "\n")
-
-# Modified conclusion based on all oncogenes, not just top 500
-if (
-  length(oncogenes_in_data) > 0 &&
-  any(oncogene_results_all$significant & oncogene_results_all$direction == "UP")
-) {
-  cat("\nH8 SUPPORTED: Some oncogenes increase with tumor stage.\n")
-  sig_onco <- oncogene_results_all %>% 
-    filter(significant, direction == "UP") %>%
-    pull(gene)
-  cat("Significant oncogenes with UP regulation:", paste(sig_onco, collapse = ", "), "\n")
-} else {
-  cat("\n H8 NOT SUPPORTED: No oncogenes show significant stage-dependent increases.\n")
 }
 ```
-
 
